Correcting Overflow Issue on IE

--- a/src/_patterns/00-nds/01-atoms/layouts/layouts-site/layouts-site.scss
+++ b/src/_patterns/00-nds/01-atoms/layouts/layouts-site/layouts-site.scss
@@ -2,3 +2,7 @@
     @extend .sr-only;
     @extend .sr-only-focusable;
 }
+
+.page {
+    overflow: hidden;
+}
